--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -97,10 +97,11 @@
 
   <!-- Footer -->
   <footer class="bd-footer py-5 mt-4" style="background-color: #f2f2fe;">
-    <div class="container ">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-6 mb-2">
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
             <ul class="list-unstyled">
+              <h5>Navigation</h5>
               <li class="mb-2"><a href="index.html">Home</a></li>
               <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
               <li class="mb-2"><a href="notaris.html">Notaris</a></li>
@@ -109,52 +110,46 @@
               <li class="mb-2"><a href="contact.html">Contact</a></li>
             </ul>        
         </div>
-        <div class="col-lg-4 col-md-6 mb-2">
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="index.html">Home</a></li>
-            <li class="mb-2"><a href="tentang-kami.html">Tentang Kami</a></li>
-            <li class="mb-2"><a href="notaris.html">Notaris</a></li>
-            <li class="mb-2"><a href="ppat.html">PPAT</a></li>
-            <li class="mb-2"><a href="profil.html">Profil Notaris & PPAT</a></li>
-            <li class="mb-2"><a href="contact.html">Contact</a></li>
+            <h5>Article & Informasi</h5>
+            <li class="mb-2"><a href="index.html">Informasi 1</a></li>
           </ul>        
       </div>
-        <div class="col-lg-4 col-md-12 mb-2">
-          <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/">
-            <span class="fs-5">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</span>
-          </a>
-          <ol class="list-unstyled">
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
+          <h5>Tentang Kami</h5>
+          <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#" style="text-decoration: none; font-size: 17px;">
-                <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
-                <span class="ps-0" style="font-weight: 400; color: #333;">Facebook</span>
+              <a href="#">
+                <i class="fa-brands fa-facebook pe-1" style="color: #4267B2;"></i>
+                <span>Facebook</span>
               </a>
             </li>
             <li class="mb-2">
-              <a href="#" style="text-decoration: none; font-size: 17px;">
-                <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
-                <span style="font-weight: 400; color: #333;">Twitter</span>
+              <a href="#">
+                <i class="fa-brands fa-twitter pe-1" style="color: #1DA1F2;"></i>
+                <span>Twitter</span>
               </a>
             </li>
             <li class="mb-2">
-              <a href="#" style="text-decoration: none; font-size: 17px;">
-                <i class="fa-brands fa-instagram" style="color: #405DE6;"></i>
-                <span style="font-weight: 400; color: #333;">Instagram</span>
+              <a href="#">
+                <i class="fa-brands fa-instagram pe-1" style="color: #405DE6;"></i>
+                <span>Instagram</span>
               </a>
             </li>
             <li class="mb-2">
-              <a href="#" style="text-decoration: none; font-size: 17px;">
-                <i class="fa-brands fa-whatsapp" style="color: 	#128C7E;"></i>
-                <span style="font-weight: 400; color: #333;">0812-2020-4223</span>
+              <a href="#">
+                <i class="fa-brands fa-whatsapp pe-1" style="color: 	#128C7E;"></i>
+                <span>0812-2020-4223</span>
               </a>
             </li>
             <li class="mb-2">
-              <a href="#" style="text-decoration: none; font-size: 17px;">
-                <i class="fa-solid fa-location-dot" style="color: #dd4b3e;"></i>
-                <span style="font-weight: 400; color: #333;">Jl. Gamprit Raya No.41, RT.004/RW.014, Jatiwaringin, Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
+              <a href="#">
+                <i class="fa-solid fa-location-dot pe-1" style="color: #dd4b3e;"></i>
+                <span>Jl. Gamprit Raya No.41,<br> RT.004/RW.014, Jatiwaringin,<br> Kec. Pd. Gede, Kota Bks, Jawa Barat 17411</span>
               </a>
             </li>
-          </ol>
+          </ul>
         </div>
       </div>
     </div>
