--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="tab-1-style.css">
+    <link rel="stylesheet" href="icon-style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- Font -->
@@ -18,10 +19,17 @@
     <title>Testing</title>
   </head>
   <body>
+    <!-- Icon -->
+    <div class="container-fluid fixed-bottom">
+      <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
+        <a href="" class=""><img src="whatsapp.png" alt=""></a>
+      </div>
+    </div>
+    <!-- End icon -->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="tab-1.html">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</a>
+          <a class="navbar-brand" href="index.html">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="text-white"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bar-chart-steps" viewBox="0 0 16 16">
                 <path d="M.5 0a.5.5 0 0 1 .5.5v15a.5.5 0 0 1-1 0V.5A.5.5 0 0 1 .5 0zM2 1.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-6a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1z"/>
@@ -191,10 +199,10 @@
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="contact.js"></script>
     <script>
       AOS.init();
     </script>
+    <script src="tab-contact.js"></script>
     <script>
         var myCarousel = document.querySelector('#carouselExampleIndicators')
             var carousel = new bootstrap.Carousel(myCarousel, {
