--- a/tab-2.html
+++ b/tab-2.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -10,6 +11,8 @@
     <link rel="stylesheet" href="nav-style.css">
     <link rel="stylesheet" href="footer-style.css">
     <link rel="stylesheet" href="form-style.css">
+    <link rel="stylesheet" href="icon-style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
     <!-- Font -->
@@ -22,6 +25,13 @@
   </head>
   
   <body>
+    <!-- Icon -->
+    <div class="container-fluid fixed-bottom">
+      <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
+        <a href="" class=""><img src="whatsapp.png" alt=""></a>
+      </div>
+    </div>
+    <!-- End icon -->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -216,6 +226,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="tab-contact.js"></script>
   </body>
 </html>
