--- a/tab-3.html
+++ b/tab-3.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="nav-style.css">
     <link rel="stylesheet" href="form-style.css">
     <link rel="stylesheet" href="footer-style.css">
+    <link rel="stylesheet" href="icon-style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +22,13 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Icon -->
+    <div class="container-fluid fixed-bottom">
+      <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
+        <a href="" class=""><img src="whatsapp.png" alt=""></a>
+      </div>
+    </div>
+    <!-- End icon -->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -179,6 +188,10 @@
       <!-- Akhir Footer-->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="tab-contact.js"></script>
 </body>
 </html>
