Fix Tombol kirim

--- a/tab-2.html
+++ b/tab-2.html
@@ -203,13 +203,11 @@
                         <textarea class="form-control" aria-label="With textarea"></textarea>
                       </div>
                   </div>
-                  <div class="row ms-5">
+                  <div class="row ms-lg-5">
                     <button class="btn tombol-form btn-kirim float-end" >Kirim</button>
                     <button class="btn tombol-form btn-loading d-none float-end" type="button" disabled>
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                     <span class="visually-hidden">Loading...</span></button>
-                  </div>
-                  <div class="row ms-5">
                   </div>
             </div>
         </form>
