--- a/tab-2.html
+++ b/tab-2.html
@@ -204,10 +204,12 @@
                       </div>
                   </div>
                   <div class="row ms-lg-5">
-                    <button class="btn tombol-form btn-kirim float-end" >Kirim</button>
-                    <button class="btn tombol-form btn-loading d-none float-end" type="button" disabled>
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    <span class="visually-hidden">Loading...</span></button>
+                    <div class="col-sm">
+                      <button class="btn tombol-form btn-kirim float-end" >Kirim</button>
+                      <button class="btn tombol-form btn-loading d-none float-end" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      <span class="visually-hidden">Loading...</span></button>
+                    </div> 
                   </div>
             </div>
         </form>
