--- a/tab-2.html
+++ b/tab-2.html
@@ -179,27 +179,27 @@
                       </div>
                   <div class="row">
                       <div class="col-lg-4 col-sm-4 offset-lg-1">
-                        <label for="" class="form-name">Nama Depan</label>
+                        <label class="form-name">Nama Depan</label>
                       <input type="text" class="form-control">
                       </div>
                       <div class="col-lg-4 col-sm-4 offset-lg-1">
-                        <label for="" class="form-name">Nama Belakang</label>
+                        <label class="form-name">Nama Belakang</label>
                       <input type="text" class="form-control">
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-lg-4 col-sm-4 offset-lg-1">
-                        <label for="" class="form-name">Email</label>
+                        <label class="form-name">Email</label>
                       <input type="email" class="form-control">
                       </div>
                       <div class="col-lg-4 col-sm-4 offset-lg-1">
-                        <label for="" class="form-name">Subject</label>
+                        <label class="form-name">Subject</label>
                       <input type="text" class="form-control">
                       </div>
                   </div>
                   <div class="row">
-                      <div class="col-lg col-sm-4 offset-lg-1">
-                        <label for="" class="form-name">Pesan</label>
+                      <div class="col-lg-4 col-sm-4 offset-lg-1">
+                        <label class="form-name">Pesan</label>
                         <textarea class="form-control" aria-label="With textarea"></textarea>
                       </div>
                   </div>
