--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="tab-1-style.css">
     <link rel="stylesheet" href="icon-style.css">
+    <link rel="stylesheet" href="footer-style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- Font -->
@@ -60,7 +61,7 @@
 
     <section id="home">
       <div class="container">
-        <div class="row" data-aos="fade-up" data-aos-offset="300" data-aos-easing="linear" data-aos-duration="800">
+        <div class="row">
         <div class="col-md-7 col-lg-8">
           <article class="blog-post">
             <h2 class="blog-post-title fst-italic">Welcome Reading !</h2>
