--- a/tab-5.html
+++ b/tab-5.html
@@ -69,54 +69,52 @@
 
     <!-- Contact -->
     <section id="contact">
-      <form name="contact">
-        <div class="container">
-            <div class="row">
-              <div class="col-lg-6 col-sm-6">
-                <img src="foto3.jpg">
+      <div class="container-fluid">
+        <form name="contact">
+          <div class="form-head d-flex">
+            <img src="foto2.jpg" alt="">
+            <div class="contact w-100">
+              <h3 class="text-center contact-logo">Contact</h3>
+              <div class="alert alert-success alert-dismissible fade show d-none ms-lg-5 me-lg-5" role="alert">
+                <strong>Terima kasih!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-              <div class="col-lg-6 col-sm-6 contact">
-                <h3 class="contact-logo">Contact</h3>
-                    <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
-                      <strong>Terima kasih!</strong> Pesan Anda sudah Rakha terima.
-                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-4 offset-lg-1">
-                      <label for="form-control" class="form-name">Nama Depan</label>
-                    <input type="text" class="form-control">
-                    </div>
-                    <div class="col-lg-4 col-sm-4 offset-lg-1">
-                      <label for="" class="form-name">Nama Belakang</label>
-                    <input type="text" class="form-control">
-                    </div>
+                <div class="form-row justify-content-center">
+                  <div class="ms-lg-3 me-lg-3">
+                    <label for="form-control" class="form-name">Nama Depan</label>
+                    <input type="text" class="form-control" id="form-control" name="form-control">
+                  </div>
+                  <div class="ms-lg-3 me-lg-3">
+                    <label for="form-control" class="form-name">Nama Belakang</label>
+                    <input type="text" class="form-control" id="form-control" name="form-control">
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-4 offset-lg-1">
-                      <label for="" class="form-name">Email</label>
-                    <input type="email" class="form-control">
-                    </div>
-                    <div class="col-lg-4 col-sm-4 offset-lg-1">
-                      <label for="" class="form-name">Subject</label>
-                    <input type="text" class="form-control">
-                    </div>
+                <div class="form-row justify-content-center">
+                  <div class="ms-lg-3 me-lg-3">
+                    <label for="form-control" class="form-name">Subject</label>
+                    <input type="text" class="form-control" id="form-control" name="form-control">
+                  </div>
+                  <div class="ms-lg-3 me-lg-3">
+                    <label for="form-control" class="form-name">Email</label>
+                    <input type="text" class="form-control" id="form-control" name="form-control">
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg col-sm-4 offset-lg-1">
-                      <label for="" class="form-name">Pesan</label>
-                      <textarea class="form-control" aria-label="With textarea"></textarea>
-                    </div>
+                <div class="form-row justify-content-center">
+                  <div class="ms-lg-3 me-lg-3">
+                    <label for="form-pesan" class="form-name">Pesan</label>
+                    <textarea class="form-control form-pesan" aria-label="With textarea" id="form-pesan" name="form-pesan"></textarea>
+                 </div>
                 </div>
-                <div class="row ms-5">
-                  <button class="btn tombol-form btn-kirim float-end" >Kirim</button>
-                  <button class="btn tombol-form btn-loading d-none float-end" type="button" disabled>
-                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                  <span class="visually-hidden">Loading...</span></button>
+                <div class="mt-3 justify-content-center form-row">
+                    <button class="btn tombol-form btn-kirim">Kirim</button>
+                    <button class="btn tombol-form btn-loading d-none" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span class="visually-hidden">Loading...</span></button>
                 </div>
-                <div class="row ms-5">
-                </div>
+              </div>
           </div>
-      </form>
+        </form>
+      </div>
     </section>
     <!-- Akhir Contact-->
 
