--- a/tab-2.html
+++ b/tab-2.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Icon -->
     <div class="container-fluid fixed-bottom">
-      <div class="col-icon float-end" data-aos="fade-left" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
+      <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
         <a href="" class=""><img src="whatsapp.png" alt="whatsapp"></a>
       </div>
     </div>
