--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                     <div class="container">
                         <div class="row work">
                             <div class="col-lg-6">                                
-                                <img src="foto2.jpg">
+                                <img src="profil.png">
                                 </div>
                                 <div class="col-lg-6">
                                 <h3>Profil</h3>
-                                <p></p>
+                                <p>Informasi tentang Kepemilikan Kantor Notaris & PPAT Agus Priyantoko, SH., MKn., MH.</p>
                                 <a href="#" class="btn tombol">Selanjutnya</a>
                                 </div>
                             </div>
@@ -147,11 +147,11 @@
                     <div class="container">
                         <div class="row work">
                             <div class="col-lg-6">                                
-                                <img src="foto2.jpg">
+                                <img src="notaris.png">
                                 </div>
                                 <div class="col-lg-6">
                                 <h3>notaris</h3>
-                                <p>Layanan yang ada di kantor kami yaitu : Pendirian PT, Pendirian Yayasan, Pendirian Perkumpulan, dan Pendirian CV.</p>
+                                <p>Layanan yang ada di kantor kami yaitu : Pendirian PT, Pendirian Yayasan, dan Pendirian CV.</p>
                                 <a href="tab-2.html" class="btn tombol">Selanjutnya</a>
                                 </div>
                             </div>
@@ -161,11 +161,11 @@
                     <div class="container">
                         <div class="row work">
                             <div class="col-lg-6">                                
-                                <img src="foto3.jpg">
+                                <img src="ppat.png">
                                 </div>
                                 <div class="col-lg-6">
                                 <h3>ppat</h3>
-                                <p>Berikut adalah halaman untuk mengetahui Layanan yang ada dikantor kami & Persyaratan yang harus diketahui</p>
+                                <p>halaman Layanan yang ada dikantor kami & Persyaratan yang harus diketahui untuk Transaksi di kantor kami.</p>
                                 <a href="tab-3.html" class="btn tombol">Selanjutnya</a>
                                 </div>
                             </div>
