--- a/tab-5.html
+++ b/tab-5.html
@@ -132,5 +132,6 @@
       AOS.init();
     </script>
     <script src="tab-contact.js"></script>
+    <script src="tab-test.js"></script>
   </body>
 </html>
