Fix Icon whatsapp

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       AOS.init();
     </script>
     <script src="tab-contact.js"></script>
+    <script src="tab-test.js"></script>
     <script>
         var myCarousel = document.querySelector('#carouselExampleIndicators')
             var carousel = new bootstrap.Carousel(myCarousel, {
