--- a/tab-5.html
+++ b/tab-5.html
@@ -1,117 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="tab-5-style.css">
-    <link rel="stylesheet" href="nav-style.css">
-    <link rel="stylesheet" href="form-style.css">
-    <link rel="stylesheet" href="footer-style.css">
-    <link rel="stylesheet" href="icon-style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="tab-5-style.css" />
+    <link rel="stylesheet" href="nav-style.css" />
+    <link rel="stylesheet" href="form-style.css" />
+    <link rel="stylesheet" href="footer-style.css" />
+    <link rel="stylesheet" href="icon-style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&family=Viga&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&family=Viga&display=swap" rel="stylesheet" />
 
     <title>Document</title>
-</head>
-<body>
-  <!-- Icon -->
-  <div class="container-fluid fixed-bottom">
-    <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
-      <a href="" class=""><img src="whatsapp.png" alt=""></a>
+  </head>
+  <body>
+    <!-- Icon -->
+    <div class="container-fluid fixed-bottom">
+      <div class="col-icon float-end" data-aos="fade-up" data-aos-offset="100" data-aos-easing="linear" data-aos-duration="500">
+        <a href="" class=""><img src="whatsapp.png" alt="" /></a>
+      </div>
     </div>
-  </div>
-  <!-- End icon -->
+    <!-- End icon -->
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="text-white"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bar-chart-steps" viewBox="0 0 16 16">
-                <path d="M.5 0a.5.5 0 0 1 .5.5v15a.5.5 0 0 1-1 0V.5A.5.5 0 0 1 .5 0zM2 1.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-6a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1z"/>
-              </svg></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active" href="index.html">Home</a>
-              <a class="nav-link" href="tab-2.html">Notaris</a>
-              <a class="nav-link" href="tab-3.html">PPAT</a>
-              <a class="nav-link" href="tab-4.html">Profil</a>
-              <a class="nav-link" href="tab-5.html">Tentang Kami</a>
-              <a class="btn tombol" href="#contact">Contact</a>
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="index.html"
+          >NOTARIS & PPAT <br />
+          Agus Priyantoko, SH., MKn., MH.</a
+        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="text-white"
+            ><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bar-chart-steps" viewBox="0 0 16 16">
+              <path
+                d="M.5 0a.5.5 0 0 1 .5.5v15a.5.5 0 0 1-1 0V.5A.5.5 0 0 1 .5 0zM2 1.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-6a.5.5 0 0 1-.5-.5v-1zm2 4a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-1z"
+              /></svg
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link" href="tab-2.html">Notaris</a>
+            <a class="nav-link" href="tab-3.html">PPAT</a>
+            <a class="nav-link" href="tab-4.html">Profil</a>
+            <a class="nav-link" href="tab-5.html">Tentang Kami</a>
+            <a class="btn tombol" href="#contact">Contact</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <!-- End -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- Contact -->
     <section id="contact">
       <div class="container-fluid">
         <form name="contact">
           <div class="form-head d-flex">
-            <img src="foto2.jpg" alt="">
+            <img src="foto2.jpg" alt="" />
             <div class="contact w-100">
               <h3 class="text-center contact-logo">Contact</h3>
               <div class="alert alert-success alert-dismissible fade show d-none ms-lg-5 me-lg-5" role="alert">
                 <strong>Terima kasih!</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-                <div class="form-row justify-content-center">
-                  <div class="ms-lg-3 me-lg-3">
-                    <label for="form-control" class="form-name">Nama Depan</label>
-                    <input type="text" class="form-control" id="form-control" name="form-control">
-                  </div>
-                  <div class="ms-lg-3 me-lg-3">
-                    <label for="form-control" class="form-name">Nama Belakang</label>
-                    <input type="text" class="form-control" id="form-control" name="form-control">
-                  </div>
+              <div class="form-row justify-content-center">
+                <div class="ms-lg-3 me-lg-3">
+                  <label for="form-control" class="form-name">Nama Depan</label>
+                  <input type="text" class="form-control" id="form-control" name="form-control" />
                 </div>
-                <div class="form-row justify-content-center">
-                  <div class="ms-lg-3 me-lg-3">
-                    <label for="form-control" class="form-name">Subject</label>
-                    <input type="text" class="form-control" id="form-control" name="form-control">
-                  </div>
-                  <div class="ms-lg-3 me-lg-3">
-                    <label for="form-control" class="form-name">Email</label>
-                    <input type="text" class="form-control" id="form-control" name="form-control">
-                  </div>
-                </div>
-                <div class="form-row justify-content-center">
-                  <div class="ms-lg-3 me-lg-3">
-                    <label for="form-pesan" class="form-name">Pesan</label>
-                    <textarea class="form-control form-pesan" aria-label="With textarea" id="form-pesan" name="form-pesan"></textarea>
-                 </div>
-                </div>
-                <div class="mt-3 justify-content-center form-row">
-                    <button class="btn tombol-form btn-kirim">Kirim</button>
-                    <button class="btn tombol-form btn-loading d-none" type="button" disabled>
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    <span class="visually-hidden">Loading...</span></button>
+                <div class="ms-lg-3 me-lg-3">
+                  <label for="form-control" class="form-name">Nama Belakang</label>
+                  <input type="text" class="form-control" id="form-control" name="form-control" />
                 </div>
               </div>
+              <div class="form-row justify-content-center">
+                <div class="ms-lg-3 me-lg-3">
+                  <label for="form-control" class="form-name">Subject</label>
+                  <input type="text" class="form-control" id="form-control" name="form-control" />
+                </div>
+                <div class="ms-lg-3 me-lg-3">
+                  <label for="form-control" class="form-name">Email</label>
+                  <input type="text" class="form-control" id="form-control" name="form-control" />
+                </div>
+              </div>
+              <div class="form-row justify-content-center">
+                <div class="ms-lg-3 me-lg-3">
+                  <label for="form-pesan" class="form-name">Pesan</label>
+                  <textarea class="form-control form-pesan" aria-label="With textarea" id="form-pesan" name="form-pesan"></textarea>
+                </div>
+              </div>
+              <div class="mt-3 justify-content-center form-row">
+                <button class="btn tombol-form btn-kirim">Kirim</button>
+                <button class="btn tombol-form btn-loading d-none" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  <span class="visually-hidden">Loading...</span>
+                </button>
+              </div>
+            </div>
           </div>
         </form>
       </div>
@@ -119,11 +112,11 @@
     <!-- Akhir Contact-->
 
     <!-- Footer -->
-        <footer>
-            <div class="container pt-3 text-center">
-                <p>&copy; 2022 All Rights Reserved by Rakha.</p>             
-            </div>         
-        </footer>
+    <footer>
+      <div class="container pt-3 text-center">
+        <p>&copy; 2022 All Rights Reserved by Rakha.</p>
+      </div>
+    </footer>
     <!-- Akhir Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
